[package]
name = "day11"
version = "0.1.0"
authors = ["Felix Hedenström <fhede@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode_computer = { path = "../intcode_computer/"}

[[bin]]
name = "day11"
path = "day11.rs"
